--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.5",
-        "xethron/migrations-generator": "dev-l5"
+        "xethron/migrations-generator": "^2.0"
     },
     "config": {
         "optimize-autoloader": true,
