--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "vuetify": "^1.5.22"
+        "vuetify": "^1.5.22",
+        "vuex": "^3.1.3"
     }
 }
