--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
-APP_NAME="CIP FP Batoi"
+APP_NAME="IES Jaume I"
 APP_ENV=local
 APP_KEY=base64:I+F8hq4UJCyEZfyedI1ULJryr5UyeIn4yMwZTVuZXtI=
 APP_DEBUG=true
