--- a/.env-example
+++ b/.env-example
@@ -29,8 +29,8 @@ MAIL_PORT=25
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=borsatreball@cipfpbatoi.es
-MAIL_FROM_NAME="Borsa Treball Batoi"
+MAIL_FROM_ADDRESS=borsatreball@iesjaumeprimer.com
+MAIL_FROM_NAME="IES Jaume I"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
